--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "web-dev",
+  "name": "",
   "version": "1.0.0",
-  "description": "Web Dev at Northeastern University",
+  "description": "",
   "main": "server.js",
   "dependencies": {
+    "angular": "^1.6.2",
+    "angular-modal-service": "^0.11.0",
     "body-parser": "^1.15.1",
+    "chai": "^3.5.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.15"
+    "mongoose": "^4.4.15",
+    "ng-popup": "^0.5.0",
+    "request": "^2.79.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine-core": "^2.5.2",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha --reporter spec",
     "start": "node server.js"
   },
-  "author": "Jose G. Annunziato",
+  "author": "Nancy Hong",
   "license": "ISC"
 }
