--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "karma-jasmine": "^1.1.0"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec",
+    "test": "karma start karma.conf.js",
     "start": "node server.js"
   },
   "author": "Nancy Hong",
